# babyredis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
benchmarks/: bench.py
docs/: performance.md
src/babyredis/: __init__.py  aio.py  app.py  client.py  testing.py
tests/: test_aio.py  test_babyredis.py  test_oracle.py  test_redka_compat.py
