[project]
name = "babyredis"
version = "0.5.0"
authors = [
  { name="Ciara Cade", email="contact@ciaracade.com" },
]
description = "Redis-like commands backed by SQLite. No server to run."
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ciaracade/babyredis"
Issues = "https://github.com/ciaracade/babyredis/issues"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"